--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -15,15 +15,15 @@ format:
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and time III − Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R
+# Effects and time III − Understanding Collapsibility of Effect Measures: Marginal vs Stratified
 
 ::: {.serif-block .text-right}
-Keywords: bias, confounding & collapsibility, effect measure, R simulation
+Keywords: clinical trial, confounding & collapsibility, effect measure, R simulation
 :::
 
 ------------------------------------------------------------------------
 
-### リスク差、リスク比、オッズ比、どれを使う？
+### 効果の指標
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -43,11 +43,15 @@ Keywords: bias, confounding & collapsibility, effect measure, R simulation
 :::
 
 ::: voice-daughter
-私「そうだったね、最初の話題はワクチン有効率だったけど、あれも発症リスクの指標だった。後はリスク比、オッズ比、ハザード比だっけ？」
+私「そうだったね、この前のワクチン有効率のやつは、リスクもワクチン有効率もパーセンテージ表記だからまぎらわしいって話だった。効果の指標（effect measure）もいろいろあったな。リスク比、オッズ比、ハザード比だっけ？」
 :::
+::::::::::::::::::::::::::::::::: 
 
+### リスク比とオッズ比、どっちを使う？
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「そんな話をしたね。じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学が気にするのは、**それぞれの指標の意味・解釈**の違いもあるけど、それ以上に**数学的な性質**を考えているんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
+お父さん「じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学が気にするのは、**それぞれの指標の意味・解釈**の違いもあるけど、それ以上に**数学的な性質**を考えているんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
 :::
 
 ::: voice-daughter
@@ -72,10 +76,9 @@ Keywords: bias, confounding & collapsibility, effect measure, R simulation
 
 まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
 
-これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、**併合可能性（collapsiblity）**と呼んでいます。
+これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、**併合可能性（collapsibility）**と呼んでいます。
 
-一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。リスク比は一定であるにも関わらず、同じ比の指標がばらつくのは、好ましい性質ではありません。
-:::
+一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。:::
 
 ::: panel-tabset
 ### ステージによる層別前
@@ -114,10 +117,33 @@ Keywords: bias, confounding & collapsibility, effect measure, R simulation
 | 　オッズ比          |            |                | 0.17倍     |
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほどね、リスク比を計算すると同じ0.5なのに、オッズ比の値はばらばらなんだ。オッズ比は層別すると同じ効果としては扱いにくいから注意しなさいってことね」
+:::
+
+::: voice-father
+お父さん「そうだね、研究者としては、ステージ別でも層別しなくても、リスクが半分になる治療なら、半分ってことが読み取れる値になってほしいよね。そういう感覚でしょ」
+:::
+
+::: voice-daughter
+私「うん」
+:::
+
+::: voice-father
+お父さん「そこまではいいんだ。でも誤解してほしくないのは、リスク比は併合可能で、オッズ比は併合可能ではない、だからオッズ比が悪いっていいたいわけじゃないよ。結果の読み取り方と相性があるってこと。オッズ比はオッズ比で、ロジスティック回帰と対応しているっていうのは別のメリットがある」
+:::
+
+::: voice-daughter
+私「ふーん。お父さんって数学的性質を整理するときめっちゃ早口」
+:::
+:::::::::::::::::::::::::::::::::
+
+### リスク差、リスク比、オッズ比、どれを使う？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほどね、オッズ比は層別解析で不安定な指標だってことね。でもさ、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？+10%とか-10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
+私「ごめん、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？+10%とか-10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
 :::
 
 ::: voice-father
@@ -146,7 +172,7 @@ Keywords: bias, confounding & collapsibility, effect measure, R simulation
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
+お父さん「つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが、おそらく結論」
 :::
 
 ::: voice-daughter
@@ -160,7 +186,7 @@ Keywords: bias, confounding & collapsibility, effect measure, R simulation
 
 ::: {.callout-note appearance="simple" title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
 
-リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（glm関数）を用いる方法です。リンク関数を選ぶことで、リスク差（link="identity"）、リスク比（link="log"）、オッズ比（link="logit"）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
+リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（`glm`）を用いる方法です。リンク関数を選ぶことで、リスク差（`link="identity"`）、リスク比（`link="log"`）、オッズ比（`link="logit"`）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
 :::
 
 ::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
