--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -93,7 +93,7 @@ generate_data <- function(n=200, hr1, hr2) {
   time_os   <- pmin(t_death, t_censoring)
   status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
   
-  ## --- 無再発存期間（RFS） -------------------------------------
+  ## --- 無再発生存期間（RFS） -----------------------------------
   time_rfs <- pmin(t_relapse, t_death, t_censoring)
   
   status_rfs <- integer(n)
