--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -127,7 +127,7 @@ Keywords: probability model, R simulation, survival & competing risks, language 
 :::
 
 ::: voice-father
-お父さん「うん。たとえばさ、これは覚えてほしいんだけど、**割合（proportion）**と**率（rate）**っていう指標のがある。日常生活でもよく使うでしょ？交通事故の発生率とか。でも、日常では、割合と率の違いを意識しないよね。でも、統計の世界では、割合は2項分布のパラメータ、率はPoisson分布っていう別の確率分布のパラメータなんだ。Poisson分布は少しマニアックだけど」
+お父さん「うん。たとえばさ、これは覚えてほしいんだけど、**割合（proportion）**と**率（rate）**っていう指標がある。日常生活でもよく使うでしょ？交通事故の発生率とか。でも、日常では、割合と率の違いを意識しないよね。でも、統計の世界では、割合は2項分布のパラメータ、率はPoisson分布っていう別の確率分布のパラメータなんだ。Poisson分布は少しマニアックだけど」
 :::
 
 ::: voice-daughter
@@ -274,7 +274,7 @@ cifplot(Event(time, status) ~ stoma,
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は2です**
 
-Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
+Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
 :::
 
 ### 文献
