--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -48,7 +48,7 @@ Keywords: clinical trial, research hypothesis, survival & competing risks, langu
 :::
 
 ::: voice-father
-お父さん「生存間解析ではね、細かいけど違うんだ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
+お父さん「生存時間解析ではね、細かいけど違うんだ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
 :::
 
 ::: voice-daughter
@@ -64,7 +64,7 @@ Keywords: clinical trial, research hypothesis, survival & competing risks, langu
 :::
 
 ::: voice-father
-お父さん「RFSでは、イベントは死亡と再発のするのが普通。つまり二次がんはイベントに含めない。無再発期間だったらイベントは再発だけ。図をみたら、イメージしやすくなるかな」
+お父さん「RFSでは、イベントは死亡と再発にするのが普通。つまり二次がんはイベントに含めない。無再発期間だったらイベントは再発だけ。図をみたら、イメージしやすくなるかな」
 :::
 
 
