--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -65,7 +65,7 @@ Keywords: effect measure, language & writing, observational study
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっと、そこにある紙ナプキンとペンをとって。式で書いてあげるよ。いくつか疫学の指標を書くけど、“98%という数字はどのリスクとどのリスクをどう比べているのか”だけが、はっきりすればいい。そのために、こういう分割表で集計したデータを頭に浮かべよう」
+お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっと、そこにある紙ナプキンとペンをとって。式で書いてあげるよ。いくつか疫学の指標を書くけど、“95%という数字はどのリスクとどのリスクをどう比べているのか”だけが、はっきりすればいい。そのために、こういう分割表で集計したデータを頭に浮かべよう」
 :::
 
 ::::::::::::::::::::::::::::::::: 
@@ -157,7 +157,7 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 :::
 
 ::: voice-father
-お父さん「解析結果はね。解釈するときに言語そのもの以外の情報が不可欠なんだ。同じ98%でも奏効率とワクチン有効率は別の計算だからね。でも日常会話でそんなこと気にしてられないでしょ。だから間違って使われることが多い。**パーセント表記が逆に誤解を生んでる**疫学の指標は、他にもあるよ」
+お父さん「解析結果はね。解釈するときに言語そのもの以外の情報が不可欠なんだ。70%だろうが80%だろうが、同じ数字でも奏効率とワクチン有効率は別の計算だからね。でも日常会話でそんなこと気にしてられないでしょ。だから間違って使われることが多い。**パーセント表記が逆に誤解を生んでる**疫学の指標は、他にもあるよ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -175,7 +175,7 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です。**
 
-割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m<sup>2</sup>です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、100%を超えなく、そして人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m<sup>2</sup>です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、100%を超えることはなく、そして人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
 
 「打率」は安打数÷打数であり、「割合」になります。
 
