--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -253,9 +253,9 @@ $$
 :::
 
 ::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
--   **正解は3です**
+-   **正解は2です**
 
-この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
+この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
 
 この計算は、集団全体をターゲットとする寄与割合を求めていることに他なりません。集団全体における曝露割合を$p$で書くと、集団寄与割合は、以下の式で表されます。
 
