--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -87,7 +87,7 @@ Keywords: bias, language & writing, observational study, study design
 :::
 
 ::: voice-father
-お父さん「そうそう。もっと細かいことをいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
+お父さん「そうそう。もっと細かいことをいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
 :::
 
 ::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
@@ -141,7 +141,7 @@ Keywords: bias, language & writing, observational study, study design
 - 交絡（confounding）
 
 ::: voice-father
-実際に研究を行うといろいろ理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+実際に研究を行うといろいろな理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
 :::
 
 ::: voice-daughter
@@ -149,7 +149,7 @@ Keywords: bias, language & writing, observational study, study design
 :::
 ::::::::::::::::::::::::::::::::: 
 
-### Up to this point, we have been talking about the essence of research — how we frame research questions and plan to obtain unbiased answers. Following episodes step away from study design and begin to reflect on observed effects and their uncertainty, how we reason about causes, and what ultimately becomes publishable.
+### Up to this point, we have been talking about the essence of research — how we frame research questions and plan to obtain unbiased answers. The following episodes step away from study design and begin to reflect on observed effects and their uncertainty, how we reason about causes, and what ultimately becomes publishable.
 
 - [Reading a Paper over a Cup of Coffee]
 - [P-Value Explanations That Seem Plausible at First Glance]
