--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Simpson's paradox"
+title: "Understanding Confounding in Effect Measures: Marginal vs Stratified"
 format:
   html:
     toc: true
