--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R"
+title: "Understanding Collapsibility of Effect Measures: Marginal vs Stratified"
 description: "いわゆる調整解析とSimpsonのパラドックスの関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。"
 tags:
   - Bias
@@ -78,7 +78,8 @@ Keywords: clinical trial, confounding & collapsibility, effect measure, R simula
 
 これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、**併合可能性（collapsibility）**と呼んでいます。
 
-一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。:::
+一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。
+:::
 
 ::: panel-tabset
 ### ステージによる層別前
@@ -251,7 +252,7 @@ print(odds_ratio)
 
 - [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
-- [Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R](effects-3.html)
+- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](effects-3.html)
 - [When Odds Ratios Approximate Risk Ratios—and When They Fail](effects-4.html)
 - [From Risk and Rate to Survival and Hazard](effects-5.html)
 - [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.html)
