--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -376,4 +376,4 @@ summary(rr_at_20)
 - [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
 - [Where My Logistic Regression Went Wrong](logistic-regression-3.html)
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
-- [Simpson's paradox](logistic-regression-5.html)
+- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-5.html)
