--- a/en/study-design-3.qmd
+++ b/en/study-design-3.qmd
@@ -67,6 +67,8 @@ Me: "Okay, that I can follow."
 Dad: "For RFS, the event is usually defined as recurrence or death. Second cancers are not included. If we were being strict about relapse-free time, then recurrence alone would be the event. Seeing it as a figure would probably make the picture clearer."
 :::
 
+![](study-design-3e.png)
+
 ::: voice-daughter
 Me: "Mm-hmm. Personally, I feel like DFS is the most important. You'd like to avoid both recurrence and second cancers. Relapse-free time doesn't feel that meaningful to analyze. And death is the most important event, isn't it? Why would you leave it out?"
 :::
