--- a/en/study-design-4.qmd
+++ b/en/study-design-4.qmd
@@ -431,7 +431,7 @@ In CDISC ADaM ADTTE, the value 1 represents TRUE. In many statistical packages, 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
 - [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
-- [A First Step into Survival and Competing Risks Analysis with R]
-- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
+- [A First Step into Survival and Competing Risks Analysis with R](study-design-4.html)
+- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys](study-design-5.html)
 - [Statistical Terms in Plain Language](glossary.html)
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
